correction 3 / service-page

--- a/css/style-services.css
+++ b/css/style-services.css
@@ -1129,4 +1129,18 @@ footer {
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+.header .head-mobile, .header .head-desktop {
+  position: relative;
+  margin-bottom: 30px;
+}
+@media (min-width: 768px) {
+  .header .head-mobile, .header .head-desktop {
+    margin-bottom: 60px;
+  }
+}
+
+.partners-bloc h3 {
+  margin-top: 80px;
+}
+
+/*# sourceMappingURL=style-services.css.map */
