--- a/css/style-services-it-comerce.css
+++ b/css/style-services-it-comerce.css
@@ -1144,4 +1144,137 @@ footer {
   margin-top: 80px;
 }
 
-/*# sourceMappingURL=style-services.css.map */
+.services-menu {
+  row-gap: 30px;
+}
+@media (min-width: 768px) {
+  .services-menu {
+    row-gap: 60px;
+  }
+}
+
+.service-item {
+  align-items: center;
+}
+.service-item .service-item-text {
+  gap: 28px;
+}
+.service-item .service-item-text .service-item-title {
+  text-align: center;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  background: linear-gradient(90deg, #F0145A 0.84%, #EF8080 99.96%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  align-self: stretch;
+}
+.service-item .service-item-text .service-item-description {
+  align-self: stretch;
+  color: #FFF;
+  text-align: center;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+.service-item .service-item-text button {
+  display: flex;
+  align-self: center;
+  padding-top: 18px;
+  padding-right: 30px;
+  padding-bottom: 18px;
+  padding-left: 30px;
+  justify-content: center;
+  align-items: flex-start;
+  border: none;
+  border-radius: 12px;
+  background: #24A3FF;
+  box-shadow: 0px 0px 20px 0px rgba(36, 163, 255, 0.5);
+}
+.service-item .service-item-text button p {
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding: 0;
+  margin: 0;
+}
+
+.separate-line-gray {
+  height: 4px;
+  align-self: stretch;
+  background: rgba(255, 255, 255, 0.5);
+  width: 100%;
+}
+
+.service-details {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.service-details p.service-details-title {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  color: #FFF;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.service-details-menu {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.service-details-menu .service-details-group {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.service-details-menu .service-details-group p {
+  padding: 0;
+  margin: 0;
+  color: #FFF;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+}
+.service-details-menu .service-details-group p::before {
+  content: "";
+  display: flex;
+  flex-shrink: 0;
+  width: 6px;
+  height: 6px;
+  border-radius: 50px;
+  background-color: #F0145A;
+  margin-top: 12px;
+}
+
+.publications .publications-bloc {
+  margin-top: 80px;
+}
+
+@media (min-width: 768px) {
+  .services-menu .service-item {
+    width: 100%;
+  }
+  .service-details-menu {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .service-details-menu .service-details-group {
+    width: calc(50% - 30px);
+  }
+}
+
+/*# sourceMappingURL=style-services-it-comerce.css.map */
