--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ footer {
   flex-direction: column;
   row-gap: 30px;
   width: 100%;
+  text-decoration: none;
 }
 .service-item-image {
   width: fit-content;
