--- a/sass/_section-homepage.scss
+++ b/sass/_section-homepage.scss
@@ -195,6 +195,7 @@ $gap: 6px;
     display: flex;
     justify-content: center;
     position: relative;
+    height: 100vh;
 
     img{
         width: 524px;
