--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Montserrat', Arial, sans-serif;
 }
