--- a/css/style.css
+++ b/css/style.css
@@ -822,9 +822,11 @@ footer {
   height: 100vh;
 }
 .logo-section img {
-  width: 524px;
-  height: 600px;
-  flex-shrink: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100vh;
 }
 .logo-section p {
   position: absolute;
@@ -849,27 +851,6 @@ footer {
 @media (min-width: 768px) {
   .logo-section p {
     width: 800px;
-  }
-}
-@media (min-width: 768px) and (max-width: 1024px) {
-  .logo-section img {
-    width: 893.277px;
-    height: 1024px;
-    flex-shrink: 0;
-  }
-}
-@media (min-width: 1024px) and (max-width: 1920px) {
-  .logo-section img {
-    width: 669.957px;
-    height: 768px;
-    flex-shrink: 0;
-  }
-}
-@media (min-width: 1920px) {
-  .logo-section img {
-    width: 872.34px;
-    height: 1000px;
-    flex-shrink: 0;
   }
 }
 
